# ROS-2-

./: README.md
coursework1/: .gitignore  README.md
coursework1/install/: local_setup.sh  setup.sh
coursework1/install/beta_pilot_controller_pkg/lib/beta_pilot_controller_pkg/: beta_pilot_controller_node  controller_node
coursework1/install/beta_pilot_controller_pkg/share/beta_pilot_controller_pkg/: package.bash  package.dsv  package.sh  package.xml  package.zsh
coursework1/install/beta_pilot_launch_pkg/share/beta_pilot_launch_pkg/: package.bash  package.dsv  package.sh  package.xml  package.zsh
coursework1/log/: latest_build
coursework1/src/beta_pilot_controller_pkg/: package.xml  setup.cfg  setup.py
coursework1/src/beta_pilot_controller_pkg/beta_pilot_controller_pkg/: beta_pilot_controller_node.py
coursework1/src/beta_pilot_launch_pkg/: package.xml  setup.py
coursework1/src/beta_pilot_launch_pkg/launch/: beta_pilot_controller_launch.py  beta_pilot_launch.py
coursework1/src/beta_pilot_launch_pkg/rviz/: default.rviz
coursework1/src/beta_pilot_pkg/: package.xml  setup.cfg  setup.py
coursework1/src/beta_pilot_pkg/beta_pilot_pkg/: beta_pilot_node.py
coursework2/install/: local_setup.sh  setup.sh  setup.zsh
coursework2/log/: latest_build
coursework2/src/vortex_droid_bridge_pkg/: setup.cfg  setup.py
coursework2/src/vortex_droid_controller_pkg/: package.xml  setup.cfg  setup.py
coursework2/src/vortex_droid_navigation_pkg/: setup.cfg  setup.py
week10/install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
week10/log/: latest_build
week10/src/jurassic_park/: setup.cfg  setup.py
week11/src/: love_letter.txt.age  love_letter_decrypted.txt  murilo_key  secret_hope.txt.age  student_key  student_key.pub
week2/src/honda/: package.xml  setup.cfg  setup.py
week2/src/testla/: package.xml  setup.cfg  setup.py
week2/src/testla/testla/: fuel_injector.py
week3/install/: local_setup.sh  setup.sh
week3/log/: latest_build  latest_list
week3/src/: README.md
week3/src/custom_message_package/: CMakeLists.txt  package.xml
week3/src/custom_message_package/msg/: CustomMessage.msg
week3/src/custom_publisher_package/: CMakeLists.txt
week3/src/custom_publisher_package/custom_publisher_package/: custom_publisher_node.py
week3/src/custom_publisher_package/launch/: combined_launch.py  publisher_launch.py
week3/src/custom_subscriber_package/: CMakeLists.txt  package.xml
week3/src/custom_subscriber_package/custom_subscriber_package/: custom_subscriber_node.py
week3/src/custom_subscriber_package/launch/: subscriber_launch.py
week4/install/: local_setup.sh  setup.sh
week4/install/package_a/lib/package_a/: node_a
week4/log/: latest_build  latest_list
week4/src/package_a/: package.xml  setup.cfg  setup.py
week4/src/package_a/package_a/: node_a.py
week4/src/package_a/resource/: package_a
week4/src/package_b/: setup.cfg  setup.py
week5/: notes txt
week5/install/: local_setup.sh  setup.sh
week5/log/: latest_build  latest_list
week5/src/package_a/: setup.py
week5/src/package_b/: package.xml  setup.cfg  setup.py
week5/src/package_b/package_b/: node_b.py
week7/install/: local_setup.sh  setup.bash  setup.sh
week7/log/: latest_build
week7/src/birmingham/: package.xml  setup.cfg  setup.py
week7/src/birmingham/birmingham/: elderberry.py
week7/src/bmw/: package.xml  setup.cfg  setup.py
week7/src/bmw/bmw/: chair.py
week8/: notes.txt
week8/install/: local_setup.sh  setup.sh
week8/log/: latest_build  latest_list
week8/src/kia/: setup.cfg  setup.py
week8/src/kia/kia/: __init__.py  syllabus.py
week8/src/liverpool/: setup.cfg  setup.py
week9/install/: local_setup.sh  setup.sh
week9/log/: latest_build
week9/src/kia/: package.xml  setup.cfg  setup.py
week9/src/kia/kia/: spark_plug.py
week9/src/kia/launch/: greet_launch.py
week9/src/manchester/: setup.cfg  setup.py
(+215 files in other folders)
