<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>birmingham</name>
  <version>0.0.0</version>
  <description>Birmingham package with action client</description>
  <maintainer email="student@example.com">Student</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sfr_coursework1_interface_package</exec_depend>

  <buildtool_depend>ament_python</buildtool_depend>
</package>

  <buildtool_depend>ament_python</buildtool_depend>
</package>
