<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bmw</name>
  <version>0.0.0</version>
  <description>BMW package with action server</description>
  <maintainer email="student@example.com">Student</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sfr_ca7_interface_package</depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sfr_ca7_interface_package</exec_depend>

  <buildtool_depend>ament_python</buildtool_depend>
</package>
